# disco5

./: .gitignore  Cargo.toml  README.md  address_modes_reference.txt  countdown.6502.asm
sample_programs/: 6502_functional_test.lst  countdown.txt
src/: bin.rs  computer.rs  lib.rs  main.rs  nes.rs
src/computer/: bus.rs  cpu.rs  cpu_structs.rs  opcode_map.rs  ppu.rs  ppu_structs.rs
src/nes/: bus.rs  cpu.rs  cpu_structs.rs  ppu.rs
tests/: run_6502_functional_test.rs  run_nes_game.rs  run_sample_programs.rs
